# hermes-agent-observability

./: .gitignore  README.md  pyproject.toml
collector/: __init__.py  store.py
dashboard/: app.js  index.html  style.css
docs/: architecture.md  demo-script.md  project-brief.md
examples/: sample-events.jsonl
scripts/: generate_sample_data.py
server/: __init__.py  main.py
tests/: test_dashboard_api.py
