[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-agent-observability"
version = "0.1.0"
description = "Standalone Agent observability dashboard with sample traces, tool calls, skill usage, and failure analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "httpx>=0.27",
]

[project.scripts]
hermes-observe-demo = "server.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["collector*", "server*"]
